# gfortran-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.txt  Readme.MD  cmake-tool-kits.json  example.f90
Platform/: Fortran
